src/objects/Race__c.object
<CustomObject>
    <description>for Race app</description>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <label>Results</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Race Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5K</fullName>
                </value>
                <value>
                    <fullName>10K</fullName>
                </value>
                <value>
                    <fullName>Half-Marathon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Race</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Race Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Races</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>